--- a/html/browser/common.css
+++ b/html/browser/common.css
@@ -337,24 +337,37 @@ div.notice
   transition: .4s;
 }
 
-.sliderred:before {
+.slider.red:before {
   background-color: #d6858b;
+}
+
+.slider.locked:before {
+  content: url("padlock.png");
+  background-color: #b4b4b4;
 }
 
 input:checked + .slider {
   background-color: #40628a;
 }
 
-input:checked + .sliderred {
+input:checked + .slider.red {
   background-color: #a92621;
+}
+
+input:checked + .slider.locked {
+  background-color: #707070;
 }
 
 input:focus + .slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:focus + .sliderred {
+input:focus + .slider.red {
   box-shadow: 0 0 1px #f3212d;
+}
+
+input:focus + .slider.locked {
+  box-shadow: 0 0 1px #979797;
 }
 
 input:checked + .slider:before {
