added a preference for IC in OOC safety check added OOC verb to print list of ss13 emojis to alert() box adds a toggle for emoji display adds twemoji support to OOC, ASAY, ADMINPM

--- a/code/modules/goonchat/browserassets/css/browserOutput.css
+++ b/code/modules/goonchat/browserassets/css/browserOutput.css
@@ -415,3 +415,6 @@ h1.alert, h2.alert		{color: #000000;}
 /* HELPER CLASSES */
 .text-normal {font-weight: normal; font-style: normal;}
 .hidden {display: none; visibility: hidden;}
+
+/* EMOJI STUFF */
+.emoji {height: 1.23em; width: 1.23em; margin: 0.05em 0.1em; vertical-align: -0.1em;}
