adds twemoji support to OOC, ASAY, ADMINPM changed key for classic emojis from : to ;

--- a/code/modules/goonchat/browserassets/css/browserOutput.css
+++ b/code/modules/goonchat/browserassets/css/browserOutput.css
@@ -415,3 +415,6 @@ h1.alert, h2.alert		{color: #000000;}
 /* HELPER CLASSES */
 .text-normal {font-weight: normal; font-style: normal;}
 .hidden {display: none; visibility: hidden;}
+
+/* EMOJI STUFF */
+.emoji {max-height: 16px; max-width: 16px}
